--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Under Construction."
+description: "I Believe Algebra can be FUN!"
 ---
 
 {% for post in paginator.posts %}
