--- a/about.html
+++ b/about.html
@@ -59,16 +59,7 @@ header-img: "img/post-bg-rwd.jpg"
     <h2><strong>Skills/Awards</strong></h2>
     <h3><strong>SKILLS</strong>：</h3>
     <p>National Computer Rank Examination L2</p>
-    <p>Master programming languages, including <img alt="Python"
-            src="https://img.shields.io/badge/Python-14354C.svg?style=for-the-badge&logo=python&logoColor=white" />,
-        <img alt="Julia"
-            src="https://img.shields.io/badge/Julia-9558B2?style=for-the-badge&logo=julia&logoColor=white" />, <img
-            alt="Javascript"
-            src="https://img.shields.io/badge/Javascript-e2470f?style=for-the-badge&logo=Javascript&logoColor=white" />,
-        <img alt="R" src="https://img.shields.io/badge/r-276DC3?style=for-the-badge&logo=r&logoColor=white" />, <img
-            alt="Mathematica"
-            src="https://img.shields.io/badge/Wolfram%20Language-DD1100?style=for-the-badge&logo=Wolfram%20Language&logoColor=white" />
-        etc.</p>
+    <p>Master programming languages, including Python, Julia, Javascript, R, Mathematica etc.
     <h3><strong>AWARDS</strong>：</h3>
     <ol start=''>
         <li>Mathematical Contest in Modeling, 2/2020 <strong>Honorable Mention</strong>（<strong>United States</strong>）
