--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Algebra-FUN"
 description: "Self-introduction"
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/tab-bg-o.jpg"
 ---
 
 <!-- Language Selector -->
@@ -14,7 +14,6 @@ header-img: "img/post-bg-rwd.jpg"
 <!-- Chinese Version
 <div class="zh post-container">
 
-    <!--copied from markdown -->
     <h2>Under Construction!</h2>
     
 </div> -->
@@ -23,14 +22,13 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="en post-container">
     <h1>Yifei Fan</h1>
     <h2>Basic Info</h2>
-    <p>Email: <a href='mailto:algebra_fun@163.com' target='_blank' class='url'>algebra_fun@163.com</a></p>
-    <p>Tel: +86 18810064808</p>
-    <p>Address: No.9, Dongsi 12th Alley, DongCheng District, Beijing</p>
+    <p>Email: <a href='mailto:yfanba@ust.hk' target='_blank' class='url'>yfanba@ust.hk</a></p>
+    <p>Tel: +852 92067167</p>
     <p>Github: <a href='https://github.com/Algebra-FUN' target='_blank' class='url'>https://github.com/Algebra-FUN</a>
     </p>
     <h2>Education</h2>
     <p>9/2018-7/2022 BSc of Mathematics and Applied Mathematics in Tianjin University. </p>
-    <p><strong>GPA</strong>: 3.67/4 <strong>Class Ranking</strong>: 11/99</p>
+    <p><strong>GPA</strong>: 3.69/4 <strong>Class Ranking</strong>: 11/99</p>
     <p><strong>Language level</strong>: Toefl 98 (reading 29, listening 26, speaking 20, writing 23) 22/07/2021</p>
     <h2>Experience</h2>
     <p><strong>19/7/2021 - 15/8/2021</strong></p>
@@ -44,7 +42,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     </ol>
     <p> </p>
-    <p><strong>9/2018-12/2019</strong></p>
+    <p><strong>9/2018-2/2020</strong></p>
     <p>TWT Studio(Student club under Student Affairs Office), Front-end developer as a web developer</p>
     <p> </p>
     <p><strong>3/2019-</strong></p>
@@ -69,7 +67,8 @@ header-img: "img/post-bg-rwd.jpg"
         <img alt="R" src="https://img.shields.io/badge/r-276DC3?style=for-the-badge&logo=r&logoColor=white" />, <img
             alt="Mathematica"
             src="https://img.shields.io/badge/Wolfram%20Language-DD1100?style=for-the-badge&logo=Wolfram%20Language&logoColor=white" />
-        etc.</p>
+        etc.
+    </p>
     <h3><strong>AWARDS</strong>：</h3>
     <ol start=''>
         <li>Mathematical Contest in Modeling, 2/2020 <strong>Honorable Mention</strong>（<strong>United States</strong>）
