--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 description: "I Believe Algebra can be FUN!"
+header-img: img/home-bg-o.jpg
 ---
 
 {% for post in paginator.posts %}
