--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Algebra-FUN"
 description: "Self-introduction"
-header-img: "img/tab-bg-o.jpg"
+header-img: "img/tag-bg-o.jpg"
 ---
 
 <!-- Language Selector -->
