--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: "Algebra-FUN"
-description: "Self-introduction"
+title: "About"
+description: "CV"
 header-img: "img/tag-bg-o.jpg"
 ---
 
@@ -30,7 +30,7 @@ header-img: "img/tag-bg-o.jpg"
     <p>9/2018-7/2022 BSc of Mathematics and Applied Mathematics in Tianjin University. </p>
     <p><strong>GPA</strong>: 3.69/4 <strong>Class Ranking</strong>: 11/99</p>
     <p><strong>Language level</strong>: Toefl 98 (reading 29, listening 26, speaking 20, writing 23) 22/07/2021</p>
-    <h2>Experience</h2>
+    <h2>Working Experience</h2>
     <p><strong>19/7/2021 - 15/8/2021</strong></p>
     <p>Assistant of Data analysis in SUZHOU NANOMICRO TECHNOLOGY CO., LTD</p>
     <p>Responsibility：</p>
@@ -49,24 +49,42 @@ header-img: "img/tag-bg-o.jpg"
     <p>Join GitHub and contribute to one open source projects <a
             href='https://github.com/Algebra-FUN/WeReadScan'>WeReadScan</a></p>
     <p> </p>
-    <h4>Others</h4>
+    <h2>Research Experience</h2>
+    <p><strong>Algorithm research on improving aggregation mode in graph neural network</strong></p>
+    <p>First Author, Graduation Thesis, 1/2022-6/2022</p>
+    <p><strong>Achievement: </strong>A model GICN(Graph inflational convolutional neural network) is proposed to 
+    improve the effect of information aggregation and alleviate over-smoothing problem.</p>
+
+    <p><strong>Contribution: </strong> Point out the insufficiency of the
+        existing GRLS optimization problem, and then generalizes it, and proposes the gen-
+        eralized GRLS optimization problem and its associated problems, based on which the
+        graph inflation operator is obtained. The inflation effect of graph inflation operator on
+        graph nodes is proved and its potential to alleviate over-smoothing and improve the
+        effect of information aggregation is demonstrated. Furthermore, graph inflational con-
+        volution operator and graph inflational convolutional neural network are proposed to
+        improve graph convolution operator.</p>
+    <!-- <h4>Others</h4>
     <p>Practice of computer language, focusing on Python programming(17/8/2020-4/9/2020)</p>
     <p>Practice of statistical calculation, focusing on R language program practice and statistical
         practice(5/2021-6/2021)</p>
     <p>Practice of production, focusing on Python language program practice and PyTorch(23/8/2021-3/9/2021)</p>
-    <p>Practice of mathematica experiment, focusing on Mathematica language program(3/2021-4/2021)</p>
+    <p>Practice of mathematica experiment, focusing on Mathematica language program(3/2021-4/2021)</p> -->
     <h2><strong>Skills/Awards</strong></h2>
     <h3><strong>SKILLS</strong>：</h3>
     <p>National Computer Rank Examination L2</p>
-    <p>Master programming languages, including <img alt="Python"
+    <p>Master programming languages, including
+        <img style="display: inline;" alt="Python"
             src="https://img.shields.io/badge/Python-14354C.svg?style=for-the-badge&logo=python&logoColor=white" />,
-        <img alt="Julia"
-            src="https://img.shields.io/badge/Julia-9558B2?style=for-the-badge&logo=julia&logoColor=white" />, <img
-            alt="Javascript"
+        <img style="display: inline;" alt="Julia"
+            src="https://img.shields.io/badge/Julia-9558B2?style=for-the-badge&logo=julia&logoColor=white" />,
+        <img style="display: inline;" alt="Javascript"
             src="https://img.shields.io/badge/Javascript-e2470f?style=for-the-badge&logo=Javascript&logoColor=white" />,
-        <img alt="R" src="https://img.shields.io/badge/r-276DC3?style=for-the-badge&logo=r&logoColor=white" />, <img
-            alt="Mathematica"
-            src="https://img.shields.io/badge/Wolfram%20Language-DD1100?style=for-the-badge&logo=Wolfram%20Language&logoColor=white" />
+        <img style="display: inline;" alt="C++"
+            src="https://img.shields.io/badge/c++-%2300599C.svg?style=for-the-badge&logo=c%2B%2B&logoColor=white" />
+        <img style="display: inline;" alt="Java"
+            src="https://img.shields.io/badge/java-%23ED8B00.svg?style=for-the-badge&logo=java&logoColor=white" />
+        <img style="display: inline;" alt="R"
+            src="https://img.shields.io/badge/r-276DC3?style=for-the-badge&logo=r&logoColor=white" />,
         etc.
     </p>
     <h3><strong>AWARDS</strong>：</h3>
@@ -120,7 +138,6 @@ header-img: "img/tag-bg-o.jpg"
     // init
     _render();
 </script>
-
 
 <!-- Gitalk 评论 start  -->
 {% if site.gitalk.enable %}
